--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -5127,10 +5127,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Storing data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "twitter_archive_clean.to_csv('twitter_archive_master.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
