--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -5145,6 +5145,510 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Analyzing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_analysis = twitter_archive_clean.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 421,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1470 entries, 1 to 1986\n",
+      "Data columns (total 17 columns):\n",
+      "tweet_id                 1470 non-null object\n",
+      "in_reply_to_status_id    1470 non-null int64\n",
+      "in_reply_to_user_id      1470 non-null int64\n",
+      "timestamp                1470 non-null datetime64[ns, UTC]\n",
+      "source                   1470 non-null category\n",
+      "text                     1470 non-null object\n",
+      "expanded_urls            1470 non-null object\n",
+      "rating_numerator         1470 non-null int64\n",
+      "rating_denominator       1470 non-null int64\n",
+      "name                     1470 non-null object\n",
+      "display_text_range       1470 non-null object\n",
+      "retweet_count            1470 non-null int64\n",
+      "favorite_count           1470 non-null int64\n",
+      "dog_stage                1470 non-null category\n",
+      "p1                       1470 non-null object\n",
+      "p1_conf                  1470 non-null float64\n",
+      "p1_dog                   1470 non-null bool\n",
+      "dtypes: bool(1), category(2), datetime64[ns, UTC](1), float64(1), int64(6), object(6)\n",
+      "memory usage: 176.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_analysis.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculating the mean retweet count and mean favorite count for all 4 dog stages (doggo, floofer, pupper & puppo)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 428,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "None       1243\n",
+       "pupper      152\n",
+       "doggo        47\n",
+       "puppo        20\n",
+       "floofer       8\n",
+       "Name: dog_stage, dtype: int64"
+      ]
+     },
+     "execution_count": 428,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.dog_stage.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 435,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doggo\n",
+      "Mean Retweet Count: 7291\n",
+      "Mean Favorite Count: 20978\n",
+      "\n",
+      "\n",
+      "Floofer\n",
+      "Mean Retweet Count: 4343\n",
+      "Mean Favorite Count: 12892\n",
+      "\n",
+      "\n",
+      "Pupper\n",
+      "Mean Retweet Count: 2436\n",
+      "Mean Favorite Count: 7998\n",
+      "\n",
+      "\n",
+      "Puppo\n",
+      "Mean Retweet Count: 6712\n",
+      "Mean Favorite Count: 23368\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Doggo')\n",
+    "print(\"Mean Retweet Count:\" , round(df_analysis.query('dog_stage == \"doggo\"')['retweet_count'].mean()))\n",
+    "print(\"Mean Favorite Count:\" , round(df_analysis.query('dog_stage == \"doggo\"')['favorite_count'].mean()))\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "print('Floofer')\n",
+    "print(\"Mean Retweet Count:\" , round(df_analysis.query('dog_stage == \"floofer\"')['retweet_count'].mean()))\n",
+    "print(\"Mean Favorite Count:\" , round(df_analysis.query('dog_stage == \"floofer\"')['favorite_count'].mean()))\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "print('Pupper')\n",
+    "print(\"Mean Retweet Count:\" , round(df_analysis.query('dog_stage == \"pupper\"')['retweet_count'].mean()))\n",
+    "print(\"Mean Favorite Count:\" , round(df_analysis.query('dog_stage == \"pupper\"')['favorite_count'].mean()))\n",
+    "\n",
+    "print('\\n')\n",
+    "\n",
+    "print('Puppo')\n",
+    "print(\"Mean Retweet Count:\" , round(df_analysis.query('dog_stage == \"puppo\"')['retweet_count'].mean()))\n",
+    "print(\"Mean Favorite Count:\" , round(df_analysis.query('dog_stage == \"puppo\"')['favorite_count'].mean()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a vast difference between the retweet count and favorite count of all the four dog stages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing number of tweets every year and every month of each year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_analysis['year'] = pd.DatetimeIndex(df_analysis['timestamp']).year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 445,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016    748\n",
+       "2015    437\n",
+       "2017    285\n",
+       "Name: year, dtype: int64"
+      ]
+     },
+     "execution_count": 445,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.year.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the number of tweets per year derived from the the timestamp column. This analysis can be further detailed by deriving the number of tweets each month of every year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 436,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.7/site-packages/pandas/core/arrays/datetimes.py:1172: UserWarning: Converting to PeriodArray/Index representation will drop timezone information.\n",
+      "  \"will drop timezone information.\", UserWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_analysis['month_year'] = df_analysis['timestamp'].dt.to_period('M')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-12    245\n",
+       "2015-11    192\n",
+       "2016-01    127\n",
+       "2016-03     92\n",
+       "2016-02     84\n",
+       "2016-07     67\n",
+       "2016-06     61\n",
+       "2017-01     52\n",
+       "2017-02     51\n",
+       "2016-10     49\n",
+       "2016-09     49\n",
+       "2016-12     46\n",
+       "2016-04     45\n",
+       "2017-07     44\n",
+       "2016-08     44\n",
+       "2016-11     44\n",
+       "2016-05     40\n",
+       "2017-06     38\n",
+       "2017-03     35\n",
+       "2017-05     33\n",
+       "2017-04     31\n",
+       "2017-08      1\n",
+       "Freq: M, Name: month_year, dtype: int64"
+      ]
+     },
+     "execution_count": 440,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.month_year.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the number of tweets every month through 12-2015 to 08-2017."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing the source for various tweets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 450,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Twitter for iPhone    1445\n",
+       "Twitter Web Client      19\n",
+       "TweetDeck                6\n",
+       "Name: source, dtype: int64"
+      ]
+     },
+     "execution_count": 450,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.source.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Twitter for iPhone as a source has the highest number of entries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analyzing dog breeds based on confidence intervals."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 462,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "golden retriever    36\n",
+       "pembroke            26\n",
+       "pug                 24\n",
+       "samoyed             20\n",
+       "pomeranian          16\n",
+       "Name: p1, dtype: int64"
+      ]
+     },
+     "execution_count": 462,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.query('p1_conf > 0.90')['p1'].value_counts().head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At 90% confidence interval, the top 5 predicted dog breeds are listed above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 473,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pug                 20\n",
+       "pembroke            19\n",
+       "samoyed             18\n",
+       "golden retriever    16\n",
+       "pomeranian          13\n",
+       "Name: p1, dtype: int64"
+      ]
+     },
+     "execution_count": 473,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.query('p1_conf > 0.95')['p1'].value_counts().head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At 95% confidence interval, the top 5 predicted dog breeds are listed above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Analysis 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At a particular confidence interval, the dog breed having maximum retweet & favorite count."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 475,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "p1                vizsla\n",
+       "retweet_count      10964\n",
+       "favorite_count     31215\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 475,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.query('p1_conf >= 0.99')[['p1','retweet_count', 'favorite_count']].max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At 99% confidence interval, Vizsla dog breed is having 10964 retweets and 31215 favorite count."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 476,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "p1                weimaraner\n",
+       "retweet_count          21983\n",
+       "favorite_count         51385\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 476,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.query('p1_conf >= 0.95')[['p1','retweet_count', 'favorite_count']].max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At 95% confidence interval, Weimaraner dog breed is having 21983 retweets and 51385 favorite count."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 477,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "p1                yorkshire terrier\n",
+       "retweet_count                 34114\n",
+       "favorite_count               119650\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 477,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analysis.query('p1_conf >= 0.90')[['p1','retweet_count', 'favorite_count']].max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At 90% confidence interval, Yorkshire Terrier dog breed is having 34114 retweets and 119650 favorite count."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
